# suitability-alert-synthetic-trade-generator

./: .gitignore  CLAUDE.md  EDA_INSIGHTS.md  README.md  main.py  pyproject.toml  requirements.txt
config/: config.json
notebooks/: eda.py
src/synthetic_trade/: __init__.py  data_generation.py  suitability_rules.py
tests/: test_suitability_rules.py
